# lynk-build

./: .gitignore  README.md  claude.md
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/agents/: book-author.md  book-verifier.md
evals/: .gitignore  CLAUDE.md  Makefile  README.md  config.yaml  conftest.py  pyproject.toml
evals/candidates/: 20260716-160447-business.yaml
evals/datasets/: business.yaml  drawers.yaml
evals/harness/: __init__.py  cases.py  judge.py  report.py  subject.py  suite.py
evals/lynk_evals/: cli.py  config.py  critic.py  datasets.py  evaluators.py  generate.py  judge.py  llm.py  metrics.py  review.py  run_eval.py  runner.py  schema.py  spike.py  trace.py
evals/suites/local/: conftest.py
evals/suites/local/book-writer/: evals_run.py
evals/suites/local/book-writer/datasets/: cases.yml
evals/suites/local/book-writer/evaluators/: outcome.py  promote_location.py
evals/suites/local/slugify/: evals_run.py
evals/suites/local/slugify/datasets/: cases.yml
evals/suites/local/slugify/evaluators/: slug.py
evals/suites/plugins/lynk-build/: conftest.py
evals/suites/plugins/lynk-build/lynk-research/: evals_run.py
evals/suites/plugins/lynk-build/lynk-research/datasets/: golden-questions.yml
evals/suites/plugins/lynk-build/lynk-research/evaluators/: citation.py  routing.py
evals/tests/: test_core.py  test_metrics.py
lynk-build/.claude-plugin/: plugin.json
lynk-build/hooks/: enrich_subagent.py  hooks.json  (+1 more)
lynk-wiki/: .bundle-version  BUNDLE_VERSION  INTEGRATION.md  TESTING.md  bk
writer/: README.md
(+181 files in other folders)
