[project]
name = "lynk-evals"
version = "0.1.0"
description = "Evaluation framework for the lynk-wiki build agent"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "pydantic>=2.0",
    "pydantic-ai-slim[anthropic]>=0.4.0",
    "pydantic-evals>=0.4.0",
    "logfire>=3.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.scripts]
lynk-evals = "lynk_evals.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lynk_evals"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]
